--- a/toc.html
+++ b/toc.html
@@ -96,7 +96,7 @@
 <ul>
 	<li><a href="./general/urls.html">CodeIgniter URLs</a></li>
 	<li><a href="./general/controllers.html">Controllers</a></li>
-	<li><a href="general/reserved_names.html">保留名稱</a></li>
+	<li><a href="general/reserved_names.html">保留字</a></li>
 	<li><a href="./general/views.html">Views</a></li>
 	<li><a href="./general/models.html">Models</a></li>
 	<li><a href="./general/helpers.html">Helpers</a></li>
